2234.   [port]          Correct some compiler warnings on SCO OSr5 [RT #17134]
  
2229.	[bug]		Null pointer dereference on query pool creation
 			failure. [RT #17133]
 
2232.	[bug]		dns_adb_findaddrinfo() could fail and return
			ISC_R_SUCCESS. [RT #17137]

2230.	[bug]		We could INSIST reading a corrupted journal.
			[RT #17132]

2228.	[contrib]	contrib: Change 2188 was incomplete.

2227.	[cleanup]	Tidied up the FAQ. [RT #17121]

2226.   [bug]           Fix build error.  [RT #17124]

2225.	[bug]		More support for systems with no IPv4 addresses.
		        [RT #17111]

2224.	[bug]		Defer journal compaction if a xfrin is in progress.
			[RT #17119]

2223.	[bug]		Make a new journal when compacting. [RT #17119]

2221.	[bug]		Set the event result code to reflect the actual
			record returned to caller when a cache update is
			rejected due to a more credible answer existing.
			[RT #17017]

2220.	[bug]		win32: Address a race condition in final shutdown of
			the Windows socket code. [RT #17028]
			
2218.	[bug]		Remove unnecessary REQUIRE from dns_validator_create().
			[RT #16976]

2216.	[cleanup]	Fix a number of errors reported by Coverity.
		        [RT #17094]

2214.	[bug]		Deregister OpenSSL lock callback when cleaning
			up. [RT #17098]

2213.	[bug]		SIG0 diagnostic failure messages were looking at the
			wrong status code. [RT #17101]

2210.	[bug]		Deleting class specific records via UPDATE could
			fail.  [RT #17074]

2209.	[port]		osx: linking against user supplied static OpenSSL
			libraries failed as the system ones were still being
			found. [RT #17078]

2208.	[port]		win32: make sure both build methods produce the
			same output. [RT #17058]

2205.	[bug]		libbind: change #2119 broke thread support. [RT #16982]

2203.	[security]	Query id generation was cryptographically weak.
			[RT # 16915]

2200.	[bug]		The search for cached NSEC records was stopping to
			early leading to excessive DLV queries. [RT #16930]
